# iir2d

./: .gitignore  ABI_POLICY.md  API_REFERENCE.md  BENCHMARK_PROTOCOL.md  CHANGELOG.md  CMakeLists.txt  COMPATIBILITY_MATRIX.md  CPU_REFERENCE_DECISION.md  GETTING_STARTED_30MIN.md  GTM_ICP_RUBRIC.md  LICENSE  NOTICE  PILOT_TO_PAID_PLAYBOOK.md  PRICING_AND_PACKAGING.md  PRODUCT_ONE_PAGER.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GATE_POLICY.md  RUNNER_SETUP.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  pyproject.toml  requirements-dev.txt  setup.py  smoke_jax.py  specification.md  task_board.md
csrc/: iir2d_core.cu  iir2d_core.h  iir2d_core_stub.cpp  torch_binding.cpp
docs/: BENCHMARK_PROTOCOL.md  CHANGELOG.md  DESIGN_PARTNER_PILOT_TEMPLATE.md  PACKAGING_LINUX.md  PACKAGING_MACOS.md  PACKAGING_WINDOWS.md  PILOT_WAVE1_EXECUTION.md  RUNNER_SETUP.md  SECURITY.md  USAGE_GUIDE.md  roadmap.md  task_board.md
iir2d_video/: __init__.py  api.py
release_records/: RC_2026-02-25_PREP.md  RC_2026-02-25_RC1.md  RC_2026-02-25_RC1_CLOSEOUT_CHECKLIST.md  RC_2026-02-25_RC1_SIGNOFF_REQUESTS.md
scripts/: __init__.py  benchmark_core_cuda.py  benchmark_iir2d_vs_conv_jax.py  benchmark_video_cuda_pipeline.py  build_and_smoke_macos.sh  build_and_smoke_windows.ps1  build_and_smoke_wsl.sh  build_benchmark_claims_packet.py  build_video_report_pack.py  check_asset_sizes.py  check_license_policy.py  check_perf_regression.py  check_perf_regression_matrix.py  core_harness.py  evaluate_hf_dataset.py  evaluate_real_images.py  iir2d_cpu_reference.py  ml_engineer_demo.py  plot_demo_metrics.py  (+4 more)
(+60 files in other folders)
